<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_stores"
        android:icon="@drawable/outline_storefront_white_48"
        android:title="@string/title_stores" />

    <item
        android:id="@+id/navigation_search"
        android:icon="@drawable/outline_search_white_48"
        android:title="@string/title_search" />

    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/ic_fav_on"
        android:title="@string/title_dashboard" />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/outline_favorite_24"
        android:title="@string/title_notifications" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_character"
        android:title="@string/title_profile" />

</menu>