<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_dashboard">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.kitam.bgapp.ui.home.BoardGameDetailFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_boardgame_detail" />

    <fragment
        android:id="@+id/navigation_hot"
        android:name="com.kitam.bgapp.ui.dashboard.DashboardFragment"
        android:label="@string/title_hot"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.kitam.bgapp.ui.home.HotFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_hot" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.kitam.bgapp.ui.favorites.FavoritesFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.kitam.bgapp.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/profile_fragment" />

    <fragment
        android:id="@+id/navigation_search"
        android:name="com.kitam.bgapp.ui.search.SearchProductFragment"
        android:label="@string/title_search"
        tools:layout="@layout/fragment_product" />

    <fragment
        android:id="@+id/navigation_stores"
        android:name="com.kitam.bgapp.ui.stores.StoresDirectoryFragment"
        android:label="@string/title_stores"
        tools:layout="@layout/fragment_search" />

</navigation>